# v8c

./: ARCHITECTURE_DIAGRAM.txt  BUILD.gn  OPENCOG_IMPLEMENTATION.md
docs/: opencog-architecture.md  opencog-getting-started.md  opencog-implementation-summary.md  opencog-quick-reference.md
include/: opencog.h
include/opencog/: agent-orchestrator.h  agent.h  atom.h  atomspace.h  isolate-mesh.h
samples/: opencog-demo.cc
src/opencog/: BUILD.gn  README.md
src/opencog/agents/: agent-orchestrator.cc  agent.cc
src/opencog/atomspace/: atom.cc  atomspace.cc
src/opencog/isolate-mesh/: isolate-mesh.cc
test/unittests/: BUILD.gn
test/unittests/opencog/: agent-unittest.cc  atomspace-unittest.cc
